# ezQueue

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  usage.ipynb
src/: ezqueue.py
tests/: test_ezqueue.py
